--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #f0f0f0;
+    background-color: #05f138;
     padding: 20px;
     text-align: center;
 }
@@ -18,7 +18,7 @@ nav {
 nav a {
     margin: 0 10px;
     text-decoration: none;
-    color: #333;
+    color: #030000;
 }
 
 main {
@@ -32,7 +32,7 @@ main {
 }
 
 .produto {
-    border: 1px solid #ccc;
+    border: 1px solid #0625d8;
     padding: 10px;
 }
 
@@ -46,15 +46,15 @@ main {
 }
 
 #lista-carrinho {
-    border: 1px solid #ccc;
+    border: 1px solid #ff0707;
     padding: 10px;
 }
 
 #finalizar-compra {
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #06f00e;
+    color: rgb(12, 6, 6);
     border: none;
     cursor: pointer;
 }
